[package]
name = "twitch-pubsub"
description = "Connect to Twitch PubSub"
version = "0.2.0"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/twitch-pubsub-rs"
license = "MIT"
edition = "2018"
keywords = ["twitch", "pubsub", "ttv"]

[lib]
name = "twitch_pubsub"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros"] }
async-trait = "0.1"
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# TODO: semver + remove git dep
twitch_api = { git = "https://github.com/twitch-rs/twitch_api", rev = "340a582", features = ["pubsub"], default-features = false }
enum_dispatch = "0.3"
futures = "0.3"
rand = "0.8"

# See https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = [
    "no-token-provider",
    "static-token-provider",
    "unsupported",
    "native-tls"
]

[features]
default = ["static-token-provider", "native-tls"]
no-token-provider = []
static-token-provider = []

unsupported = ["twitch_api/unsupported"]

native-tls = ["async-tungstenite/tokio-native-tls"]
rustls-webpki-roots = ["async-tungstenite/tokio-rustls-webpki-roots"]
