[package]
name = "twitch-pubsub"
description = "Connect to Twitch PubSub"
version = "0.3.0"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/twitch-pubsub-rs"
license = "MIT"
edition = "2021"
keywords = ["twitch", "pubsub", "ttv"]

[lib]
name = "twitch_pubsub"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros"] }
thiserror = "1.0"
# TODO: remove git dep
twitch_api = { git = "https://github.com/twitch-rs/twitch_api", features = [
    "pubsub",
], default-features = false }
rand = "0.8"

fastwebsockets = { version = "0.7", features = ["upgrade"] }
simd-json = "0.13"
hyper = "1.1"
hyper-util = "0.1.3"
http = "1"
tokio-rustls = "0.25"
webpki-roots = "0.26"
url = "2.5"
http-body-util = "0.1"
backoff = "0.4"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# See https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["no-token-provider", "static-token-provider", "unsupported"]

[features]
default = ["static-token-provider"]
no-token-provider = []
static-token-provider = []

unsupported = ["twitch_api/unsupported"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["unsupported"]
