[package]
name = "twitch-pubsub"
description = "Connect to Twitch PubSub"
version = "0.3.0"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/twitch-pubsub-rs"
license = "MIT"
edition = "2021"
keywords = ["twitch", "pubsub", "ttv"]

[lib]
name = "twitch_pubsub"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.41", features = ["rt", "time", "sync", "macros"] }
thiserror = "1.0"
# TODO: remove git dep
twitch_api = { git = "https://github.com/twitch-rs/twitch_api", features = [
    "pubsub",
], default-features = false }
ws-pool = { git = "https://github.com/nerixyz/ws-pool" }
rand = "0.8"
url = "2.5"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# See https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["no-token-provider", "static-token-provider", "unsupported"]

[features]
default = ["static-token-provider"]
no-token-provider = []
static-token-provider = []

unsupported = ["twitch_api/unsupported"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["unsupported"]
